# opencl-bindings

./: .gitignore  README.md  opencl-bindings.cabal
cbits/: opencl.c
exe/: Main.hs
src/Data/: OpenCL.hs
src/Data/OpenCL/: Buffer.hs  CommandQueue.hs  Context.hs  Device.hs  Event.hs  Exception.hs  Handle.hs  Kernel.hs  Platform.hs  Program.hs  Raw.hs
src/Data/OpenCL/Event/: Internal.hs
