name:                opencl-bindings
version:             0.1.0.0
synopsis:            OpenCL bindings for Haskell
description:         This is an OpenCL bindings library targeting OpenCL 1.2.
                     It features garbage collection for OpenCL resources and
                     OpenCL errors are thrown as exceptions.
license:             ISC
license-file:        LICENSE
author:              Mikko Juola
maintainer:          mikko.juola+dev@iki.fi
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.OpenCL
                       Data.OpenCL.Buffer
                       Data.OpenCL.CommandQueue
                       Data.OpenCL.Context
                       Data.OpenCL.Device
                       Data.OpenCL.Exception
                       Data.OpenCL.Event
                       Data.OpenCL.Event.Internal
                       Data.OpenCL.Kernel
                       Data.OpenCL.Handle
                       Data.OpenCL.Platform
                       Data.OpenCL.Program
                       Data.OpenCL.Raw
  build-depends:       base >=4.7 && <5.0
                      ,bytestring
                      ,exceptions
                      ,primitive
                      ,yaml
                      ,transformers
                      ,vector
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-name-shadowing -pgmPcpphs -optP--cpp
  c-sources:           cbits/opencl.c
  if os(darwin)
    frameworks:        OpenCL
  else
    extra-libraries:     OpenCL
  default-language:    Haskell2010

executable cl-info
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5.0
                      ,bytestring
                      ,opencl-bindings
                      ,time
                      ,yaml
  hs-source-dirs:      exe
  ghc-options:         -Wall -fno-warn-name-shadowing -threaded -rtsopts "-with-rtsopts=-A64m -N -n4m"
  default-language:    Haskell2010

